--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 /* App.css */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 /* Primary Color: Duck Yellow */
 :root {
   --primary-color: #ffc107;
@@ -58,6 +58,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   font-style: normal;
 }
+p, span{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
 
 /* Additional CSS for other elements remains unchanged */
 .duck-icon {
@@ -65,4 +71,17 @@ h1, h2, h3, h4, h5, h6 {
   height: 24px; /* Adjust size as needed */
   margin-right: 10px;
   display: inline-block;
+}
+
+.Appbar {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+.start-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
 }
