--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -1,41 +1,34 @@
 /* src/components/Dashboard.css */
 
-/* Card Styles */
-.duck-card {
+.duck-list-item {
   background: #f9f9f9;
   border: 2px solid #e1e1e1;
   border-radius: 10px;
   transition: transform 0.2s ease;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
-.duck-card:hover {
+.duck-list-item:hover {
   transform: scale(1.05);
-  border-color: var(--primary-color); /* Using global primary color */
+  border-color: var(--primary-color);
 }
 
-/* Icon Styles */
-.duck-icon {
-  color: var(--primary-color); /* Using global primary color */
-  margin-right: 10px;
+.list-item-text-container {
+  display: flex;
+  align-items: center;
 }
 
-/* Badge Styles */
-.badge-success {
-  background-color: var(--success-color); /* Using global success color */
+.badge-item {
+  margin-right: 8px; /* Space between the badge and the text */
 }
 
-.badge-secondary {
-  background-color: var(--text-color); /* Using global text color */
+.toggle-button-selected {
+  background-color: white !important;
 }
 
-/* Button Styles */
-.btn-primary {
-  background-color: var(--primary-color); /* Using global primary color */
-  border: none;
-  color: white;
-  transition: background-color 0.3s ease;
+.toggle-button-unselected {
+  background-color: white !important;
 }
 
-.btn-primary:hover {
-  background-color: var(--primary-color-hover); /* Using global primary hover color */
-}
+/* src/components/Dashboard.css */
