--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -21,8 +21,8 @@
 }
 
 .header-icon {
-  width: 50%; /* Smaller width for mobile */
-  height: auto;
+  width: 175; /* Smaller width for mobile */
+  height: 175px; /* Smaller width for mobile */
   margin-bottom: 10px;
 }
 
@@ -75,4 +75,27 @@ button.btn-primary {
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+/* Example CSS for the spinner loader */
+.loader {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Additional styles for alignment */
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Adjust based on the image size */
 }
